--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,35 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v22-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v22-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v22-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../fonts/poppins-v22-latin-900.woff2') format('woff2');
+}
+
 :root{
     --color-primery-dark: #31261a;
     --color-primery-light: #faf4ea;
@@ -9,12 +41,25 @@ ul{
     list-style-type: none;
 }
 
+/* body */
+
 body{
-    color: var(--color-primery-dark)
+    color: var(--color-primery-dark);
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.5;
+    font-size: 18px;
+    font-weight: 400
 }
+
+address{
+    font-style: normal;
+}
+
+/* button */
 
 .button{
     color: var(--color-primery-light);
+    font-weight: 600;
     background-color: var(--color-brand-light);
     border: 2px solid var(--color-brand-light);
     border-radius: 8px;
@@ -26,27 +71,102 @@ body{
     background-color: transparent;
 }
 
+/* links */
+
 .link{
     color: var(--color-primery-light);
+    text-decoration: none;
 }
 
 .link:hover{
     color: var(--color-brand-light);
+    font-weight: 600;
 }
+
+/* HERO-TITLE */
 
 .hero-title {
     color: var(--color-primery-light);
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 128px;
+    font-weight: 900;
 }
 
 .hero-title .accent{
     color: var(--color-brand-light);
 }
 
-.adventages-list{
+
+/* advantages */
+
+.advantages-list{
     color: var(--color-primery-light);
     background-color: var(--color-brand-light);
 }
 
+.advantages-item{
+    font-size: 20px;
+    font-weight: 300;
+}
+
+/* Section title */
+
+.section-title{
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
+
 .section-title .accent{
     color: var(--color-brand-dark);
+}
+
+/* traditions-section */
+
+.traditions-text .uppercase{
+    color: var(--color-brand-light);
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.traditions-text .lowercase{
+    color: var(--color-brand-light);
+    text-transform: lowercase;
+}
+
+/* Chefs-section */
+
+.chef-title{
+    font-size: 40px;
+    font-weight: 600;
+}
+
+/* Format-section */
+
+.format-title{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.format-text {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* Footer */
+
+.address-link{
+    color: var(--color-primery-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.address-link:hover{
+    color: var(--color-brand-light);
+}
+
+.address-copyright{
+    font-size: 14px;
 }
