--- a/css/styles.css
+++ b/css/styles.css
@@ -37,27 +37,59 @@
     --color-brand-dark: #465929;
 }
 
-ul{
-    list-style-type: none;
+
+/* main */
+
+*{
+    box-sizing: border-box;
 }
 
-/* body */
+ul {
+    list-style-type: none;
+}
 
 body{
     color: var(--color-primery-dark);
     font-family: 'Poppins', sans-serif;
+    margin: 0;
     line-height: 1.5;
     font-size: 18px;
     font-weight: 400
+}
+
+.visually-hidden{
+    position: absolute;
+    left: -1000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.section {
+    padding: 48px 0;
+}
+
+h1, h2, h3, h4, h5, h6,
+p {
+    margin-top: 0;
 }
 
 address{
     font-style: normal;
 }
 
+.conteiner {
+    width: 100%;
+    max-width: 1288px;
+    margin: 0 auto;
+    padding: 24px;
+}
+
 /* button */
 
 .button{
+    padding: 16px 32px;
     color: var(--color-primery-light);
     font-weight: 600;
     background-color: var(--color-brand-light);
@@ -83,12 +115,16 @@ address{
     font-weight: 600;
 }
 
-/* HERO-TITLE */
+/* Hero-section */
+
+.hero-section{
+    padding: 272px 0;
+}
 
 .hero-title {
+    margin-bottom: 0;
     color: var(--color-primery-light);
     text-align: center;
-    text-transform: uppercase;
     font-size: 128px;
     font-weight: 900;
 }
@@ -124,6 +160,14 @@ address{
 
 /* traditions-section */
 
+.traditions-section {
+    padding-top: 96px;
+}
+
+.traditions-title {
+    margin-bottom: 42px;
+}
+
 .traditions-text .uppercase{
     color: var(--color-brand-light);
     text-transform: uppercase;
@@ -137,12 +181,21 @@ address{
 
 /* Chefs-section */
 
+.chefs-title {
+    margin-bottom: 80px;
+}
+
 .chef-title{
+    margin-bottom: 16px;
     font-size: 40px;
     font-weight: 600;
 }
 
 /* Format-section */
+
+.formats-title {
+    margin-bottom: 80px;
+}
 
 .format-title{
     font-size: 24px;
@@ -152,6 +205,12 @@ address{
 .format-text {
     font-size: 14px;
     font-weight: 300;
+}
+
+/* Contacts-section */
+
+.contacts-title {
+    margin-bottom: 16px;
 }
 
 /* Footer */
