--- a/css/styles.css
+++ b/css/styles.css
@@ -33,14 +33,18 @@
 :root{
     --color-primery-dark: #31261a;
     --color-primery-light: #faf4ea;
-    --color-brand-light: #819857;
+    --color-brand-normal: #819857;
     --color-brand-dark: #465929;
+    --color-brand-light: #cfcfbc;
+    --color-secondary-dark: #a28268;
 }
 
 
 /* main */
 
-*{
+*,
+*::before,
+*::after{
     box-sizing: border-box;
 }
 
@@ -50,6 +54,7 @@ ul {
 
 body{
     color: var(--color-primery-dark);
+    background-color: var(--color-primery-light);
     font-family: 'Poppins', sans-serif;
     margin: 0;
     line-height: 1.5;
@@ -75,15 +80,20 @@ p {
     margin-top: 0;
 }
 
+a{
+    display: inline-block;
+}
+
 address{
     font-style: normal;
 }
 
-.conteiner {
+.container {
     width: 100%;
     max-width: 1288px;
     margin: 0 auto;
-    padding: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 /* button */
@@ -92,8 +102,8 @@ address{
     padding: 16px 32px;
     color: var(--color-primery-light);
     font-weight: 600;
-    background-color: var(--color-brand-light);
-    border: 2px solid var(--color-brand-light);
+    background-color: var(--color-brand-normal);
+    border: 2px solid var(--color-brand-normal);
     border-radius: 8px;
     cursor: pointer;
 }
@@ -111,14 +121,44 @@ address{
 }
 
 .link:hover{
-    color: var(--color-brand-light);
-    font-weight: 600;
+    color: var(--color-brand-normal);
+}
+
+/* Header */
+
+.header {
+    background: var(--color-brand-dark);
+}
+.header-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-nav {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-grow: 1;
+    gap: 64px;
+    justify-content: center;
 }
 
 /* Hero-section */
 
 .hero-section{
     padding: 272px 0;
+    background-image: url(../images/hero-section-background.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
 }
 
 .hero-title {
@@ -130,18 +170,27 @@ address{
 }
 
 .hero-title .accent{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 
-/* advantages */
+/* Advantages-section */
+
+.advantages-section {
+    padding: 16px 0;
+    background-color: var(--color-brand-normal);
+}
 
 .advantages-list{
-    color: var(--color-primery-light);
-    background-color: var(--color-brand-light);
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    padding-left: 0;
+    margin: 0;
 }
 
 .advantages-item{
+    color: var(--color-primery-light);
     font-size: 20px;
     font-weight: 300;
 }
@@ -158,7 +207,21 @@ address{
     color: var(--color-brand-dark);
 }
 
+.section-title.centered{
+    text-align: center;
+}
+
 /* traditions-section */
+
+.traditions-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.traditions-content {
+    max-width: 710px;
+}
 
 .traditions-section {
     padding-top: 96px;
@@ -169,20 +232,63 @@ address{
 }
 
 .traditions-text .uppercase{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     text-transform: uppercase;
     font-weight: 600;
 }
 
 .traditions-text .lowercase{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     text-transform: lowercase;
+}
+
+.traditions-text.limited {
+    max-width: 330px;
 }
 
 /* Chefs-section */
 
 .chefs-title {
-    margin-bottom: 80px;
+    max-width: 520px;
+    margin: 0 auto 80px;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+    display: block;
+    width: 352px;
+    border: 2px solid var(--color-brand-light);
+    content: '';
+}
+
+.chefs-list {
+    display: flex;
+    gap: 40px 30px;
+    flex-wrap: wrap;
+}
+
+.chefs-item{
+    flex-basis: calc(100% - 30px / 2);
+}
+
+.chef-card{
+    display: flex;
+    gap: 30px;
+}
+
+.chef-text p{
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+    margin-bottom: 0;
+}
+
+.chef-photo{
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primery-light),
+    -16px 16px 0 2px 
+    var(--color-secondary-dark);
 }
 
 .chef-title{
@@ -192,6 +298,36 @@ address{
 }
 
 /* Format-section */
+
+.formats-container{
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
+.formats-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 20px;
+}
+
+.format-item {
+    flex-basis: calc(100% - 40px / 3);
+}
+
+.format-card {
+    height: 444px;
+    padding: 24px;
+    background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primery-dark)
+    );
+    border: 1px solid lightgray;
+    border-radius: 16px;
+}
 
 .formats-title {
     margin-bottom: 80px;
@@ -207,13 +343,83 @@ address{
     font-weight: 300;
 }
 
+/* Carousel */
+
+.carousel-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    fill: var(--color-primery-dark);
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.carousel-button:hover {
+    background-color: var(--color-primery-dark);
+    fill: var(--color-primery-light);
+}
+
 /* Contacts-section */
+
+.contacts-section{
+    padding-bottom: 96px;
+}
+
+.contact-container{
+    display: flex;
+    gap: 32px;
+}
+
+.contact-map{
+    flex-shrink: 0;
+    border: none;
+    border-radius: 16px;
+}
 
 .contacts-title {
     margin-bottom: 16px;
 }
 
 /* Footer */
+
+.footer{
+    padding: 32px 0;
+}
+
+.footer-container{
+    display: flex;
+    gap: 20px;
+}
+
+.footer-nav,
+.footer-address{
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+
+.footer-logo,
+.footer-menu{
+    flex-grow: 1;
+}
+
+.address-list,
+.address-info{
+    flex-grow: 1;
+}
+
+.footer-menu,
+.address-list{
+    margin: 0;
+    padding: 0;
+}
+
 
 .address-link{
     color: var(--color-primery-light);
@@ -222,10 +428,22 @@ address{
     text-decoration: none;
 }
 
+.address-icon{
+    fill: var(--color-primery-light);
+}
+
 .address-link:hover{
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
 }
 
 .address-copyright{
     font-size: 14px;
+}
+
+.footer{
+    background-image: url(../images/footer-background.png);
+    background-color: var(--color-primery-dark);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
