--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,8 @@
 }
 
 :root{
-    --color-primery-dark: #31261a;
-    --color-primery-light: #faf4ea;
+    --color-primary-dark: #31261a;
+    --color-primary-light: #faf4ea;
     --color-brand-normal: #819857;
     --color-brand-dark: #465929;
     --color-brand-light: #cfcfbc;
@@ -53,8 +53,8 @@ ul {
 }
 
 body{
-    color: var(--color-primery-dark);
-    background-color: var(--color-primery-light);
+    color: var(--color-primary-dark);
+    background-color: var(--color-primary-light);
     font-family: 'Poppins', sans-serif;
     margin: 0;
     line-height: 1.5;
@@ -100,7 +100,7 @@ address{
 
 .button{
     padding: 16px 32px;
-    color: var(--color-primery-light);
+    color: var(--color-primary-light);
     font-weight: 600;
     background-color: var(--color-brand-normal);
     border: 2px solid var(--color-brand-normal);
@@ -116,8 +116,9 @@ address{
 /* links */
 
 .link{
-    color: var(--color-primery-light);
+    color: var(--color-primary-light);
     text-decoration: none;
+    transition: color .3s;
 }
 
 .link:hover{
@@ -127,7 +128,11 @@ address{
 /* Header */
 
 .header {
-    background: var(--color-brand-dark);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 32px;
 }
 .header-container {
     display: flex;
@@ -155,7 +160,13 @@ address{
 
 .hero-section{
     padding: 272px 0;
-    background-image: url(../images/hero-section-background.jpg);
+    background-image: linear-gradient(
+        102.76deg,
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 58.46%,
+        rgba(18, 18, 17, 0) 90.36%
+    ),
+    url(../images/hero-section-background.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -163,7 +174,7 @@ address{
 
 .hero-title {
     margin-bottom: 0;
-    color: var(--color-primery-light);
+    color: var(--color-primary-light);
     text-align: center;
     font-size: 128px;
     font-weight: 900;
@@ -190,7 +201,7 @@ address{
 }
 
 .advantages-item{
-    color: var(--color-primery-light);
+    color: var(--color-primary-light);
     font-size: 20px;
     font-weight: 300;
 }
@@ -249,22 +260,32 @@ address{
 /* Chefs-section */
 
 .chefs-title {
-    max-width: 520px;
+    position: relative;
     margin: 0 auto 80px;
 }
 
 .chefs-title::before,
 .chefs-title::after {
-    display: block;
+    position: absolute;
+    bottom: 24px;
     width: 352px;
     border: 2px solid var(--color-brand-light);
     content: '';
 }
 
+.chefs-title::before{
+    left: 0;
+}
+
+.chefs-title::after {
+    right: 0;
+}
+
 .chefs-list {
     display: flex;
     gap: 40px 30px;
-    flex-wrap: wrap;
+    padding: 0;
+    /* flex-wrap: wrap; */
 }
 
 .chefs-item{
@@ -286,7 +307,7 @@ address{
 
 .chef-photo{
     border-radius: 4px 4px 4px 200px;
-    box-shadow: -16px 16px 0 0 var(--color-primery-light),
+    box-shadow: -16px 16px 0 0 var(--color-primary-light),
     -16px 16px 0 2px 
     var(--color-secondary-dark);
 }
@@ -323,10 +344,15 @@ address{
     180deg,
     rgba(49, 38, 26, 0) 55.21%,
     rgba(49, 38, 26, 0.71) 72.92%,
-    var(--color-primery-dark)
+    var(--color-primary-dark)
     );
     border: 1px solid lightgray;
     border-radius: 16px;
+    transform: transform 0.3s;
+}
+
+.format-card:hover {
+    transform: scale(1.05);
 }
 
 .formats-title {
@@ -352,7 +378,7 @@ address{
     width: 44px;
     height: 44px;
     padding: 0;
-    fill: var(--color-primery-dark);
+    fill: var(--color-primary-dark);
     background-color: transparent;
     border-radius: 50%;
     border: 1px solid;
@@ -361,8 +387,12 @@ address{
 }
 
 .carousel-button:hover {
-    background-color: var(--color-primery-dark);
-    fill: var(--color-primery-light);
+    background-color: var(--color-primary-dark);
+    fill: var(--color-primary-light);
+}
+
+.carousel-button.next {
+    transform: rotate(180deg);
 }
 
 /* Contacts-section */
@@ -390,6 +420,34 @@ address{
 
 .footer{
     padding: 32px 0;
+    position: relative;
+    background-image: url(../images/footer-background.png);
+    background-color: var(--color-primary-dark);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.footer::before,
+.footer::after {
+    position: absolute;
+    bottom: 0;
+    background-repeat: no-repeat;
+    content: '';
+}
+
+.footer::before {
+    width: 180px;
+    height: 120px;
+    left: 0;
+    background-image: url(../images/decor-bread-small.png);
+}
+
+.footer::after {
+    width: 380px;
+    height: 190px;
+    right: 0;
+    background-image: url(../images/decor-bread-large.png);
 }
 
 .footer-container{
@@ -422,14 +480,14 @@ address{
 
 
 .address-link{
-    color: var(--color-primery-light);
+    color: var(--color-primary-light);
     font-size: 16px;
     font-weight: 300;
     text-decoration: none;
 }
 
 .address-icon{
-    fill: var(--color-primery-light);
+    fill: var(--color-primary-light);
 }
 
 .address-link:hover{
@@ -440,10 +498,100 @@ address{
     font-size: 14px;
 }
 
-.footer{
-    background-image: url(../images/footer-background.png);
-    background-color: var(--color-primery-dark);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+/* Modal */
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: opacity .3s, visibility .3s;
+}
+
+.modal{
+    position: relative;
+    width: 100%;
+    max-width: 880px;
+    height: 100%;
+    max-height: 880px;
+    padding: 128px;
+    background-color: var(--color-primary-light);
+    border-radius: 32px;
+    overflow-y: auto;
+}
+
+.backdrop.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal-btn-close{
+    position: absolute;
+    top: 40px;
+    right: 40px;
+}
+
+/* Form */
+
+.form-field {
+    position: relative;
+    margin-bottom: 32px;
+}
+
+.form-label {
+    position: absolute;
+    top: 16px;
+    left: 42px;
+    color: var(--color-secondary-dark);
+}
+
+.form-input {
+    width: 100%;
+    padding: 16px 42px;
+    font-size: 16px;
+    line-height: 1.7;
+    border: 1px solid var(--color-secondary-dark);
+    border-radius: 8px;
+    background-color: transparent;
+}
+
+.form-input:focus {
+    border-color: var(--color-brand-normal);
+    outline: none;
+}
+
+.form-input::placeholder {
+    color: var(--color-secondary-dark);
+    font-size: 16px;
+    line-height: 1.7;    
+}
+
+.form-input:focus::placeholder {
+    color: var(--color-primary-dark);
+}
+
+.form-button {
+    display: block;
+    margin: 0 auto 24px;
+}
+
+.form-terms {
+    margin: 0 auto;
+    max-width: 220px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.form-link {
+    color: var(--color-primary-dark);
+    text-underline-offset: 2px;
 }
