Added settings to prettierrc styles

--- a/scss/components/_links.scss
+++ b/scss/components/_links.scss
@@ -1,9 +1,9 @@
 .link {
-    color: var(--color-primary-light);
-    text-decoration: none;
-    transition: color .3s;
+  color: var(--color-primary-light);
+  text-decoration: none;
+  transition: color 0.3s;
 }
 
 .link:hover {
-    color: var(--color-brand-normal);
+  color: var(--color-brand-normal);
 }
