--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,21 +3,21 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 body {
-    color: var(--color-primary-dark);
-    background-color: var(--color-primary-light);
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    line-height: 1.5;
-    font-size: 18px;
-    font-weight: 400
+  color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  line-height: 1.5;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 h1,
@@ -27,13 +27,13 @@ h4,
 h5,
 h6,
 p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 a {
-    display: inline-block;
+  display: inline-block;
 }
 
 address {
-    font-style: normal;
+  font-style: normal;
 }
