--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -6,73 +6,86 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
 
-.footer::before,
-.footer::after {
-  position: absolute;
-  bottom: 0;
-  background-repeat: no-repeat;
-  content: '';
-}
+  &::before,
+  &::after {
+    position: absolute;
+    bottom: 0;
+    background-repeat: no-repeat;
+    content: '';
+  }
 
-.footer::before {
-  width: 180px;
-  height: 120px;
-  left: 0;
-  background-image: url(../images/decor-bread-small.png);
-}
+  &::before {
+    width: 180px;
+    height: 120px;
+    left: 0;
+    background-image: url(../images/decor-bread-small.png);
+  }
 
-.footer::after {
-  width: 380px;
-  height: 190px;
-  right: 0;
-  background-image: url(../images/decor-bread-large.png);
-}
+  &::after {
+    width: 380px;
+    height: 190px;
+    right: 0;
+    background-image: url(../images/decor-bread-large.png);
+  }
 
-.footer-container {
-  display: flex;
-  gap: 20px;
-}
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 
-.footer-nav,
-.footer-address {
-  display: flex;
-  flex-basis: 50%;
-  gap: 20px;
-}
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      flex-basis: 50%;
+    }
+  }
 
-.footer-logo,
-.footer-menu {
-  flex-grow: 1;
-}
+  &__nav,
+  &__address {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    gap: 20px;
 
-.address-list,
-.address-info {
-  flex-grow: 1;
-}
+    @media screen and (min-width: $bp-tablet) {
+      text-align: left;
+      flex-direction: row;
+      flex-basis: 50%;
+    }
+  }
 
-.footer-menu,
-.address-list {
-  margin: 0;
-  padding: 0;
-}
+  &__logo,
+  &__menu {
+    flex-grow: 1;
+  }
 
-.address-link {
-  color: var(--color-primary-light);
-  font-size: 16px;
-  font-weight: 300;
-  text-decoration: none;
-}
+  &__menu,
+  &__address-list {
+    margin: 0;
+    padding: 0;
+  }
 
-.address-icon {
-  fill: var(--color-primary-light);
-}
+  &__address-list,
+  &__address-info {
+    flex-grow: 1;
+  }
 
-.address-link:hover {
-  color: var(--color-brand-normal);
-}
+  &__address-link {
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+  }
 
-.address-copyright {
-  font-size: 14px;
+  &__address-icon {
+    fill: var(--color-primary-light);
+  }
+
+  &__address-link:hover {
+    color: var(--color-brand-normal);
+  }
+
+  &__address-copyright {
+    font-size: 14px;
+  }
 }
