--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,11 @@
-@import './base';
 @import './utils/fonts';
 @import './utils/variables';
 @import './utils/utils';
 @import './utils/text-brand';
+@import './base';
 
 @import './components/buttons';
+@import './components/pagination';
 @import './components/links';
 @import './components/modal';
 @import './components/forms';
@@ -12,13 +13,13 @@
 @import './components/chef-card';
 @import './components/format-card';
 @import './components/input';
+@import './components/mobile-menu';
 
 @import './layouts/section';
 @import './layouts/container';
 @import './layouts/header';
 @import './layouts/hero-section';
 @import './layouts/advantages-section';
-// @import './layouts/section-title';
 @import './layouts/traditions-section';
 @import './layouts/chefs-section';
 @import './layouts/format-section';
