--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,8 +16,20 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   line-height: 1.5;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
+
+  @media screen and (min-width: $bp-tablet) {
+    font-size: 18px;
+    font-weight: 400;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 h1,
