--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -1,15 +1,23 @@
 .chefs-section {
   &__title {
     position: relative;
-    margin: 0 auto 80px;
+    margin: 0 auto 24px;
+
+    @media screen and (min-width: $bp-desktop) {
+      margin: 80px;
+    }
 
     &::before,
     &::after {
+      display: none;
       position: absolute;
       bottom: 24px;
       width: 352px;
       border: 2px solid var(--color-brand-light);
       content: '';
+      @media screen and (min-width: $bp-desktop) {
+        display: block;
+      }
     }
 
     &::before {
@@ -23,12 +31,19 @@
 
   &__list {
     display: flex;
-    gap: 40px 30px;
+    gap: 20px;
     padding: 0;
+    flex-direction: column;
     /* flex-wrap: wrap; */
+    @media screen and (min-width: $bp-tablet) {
+      gap: 40px 30px;
+      flex-direction: row;
+    }
   }
 
   &__item {
-    flex-basis: calc(100% - 30px / 2);
+    @media screen and (min-width: $bp-tablet) {
+      flex-basis: calc(100% - 30px / 2);
+    }
   }
 }
