--- a/scss/layouts/_contacts-section.scss
+++ b/scss/layouts/_contacts-section.scss
@@ -7,7 +7,13 @@
 
   &__container {
     display: flex;
-    gap: 32px;
+    gap: 24px;
+    flex-direction: column;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      gap: 32px;
+    }
   }
 
   &__form-field {
@@ -17,8 +23,21 @@
 
   &__map {
     flex-shrink: 0;
+    margin: 0 -24px;
+    height: '176px';
     border: none;
     border-radius: 16px;
+
+    @media screen and (min-width: $bp-tablet) {
+      margin: auto;
+      width: '320px';
+      height: '500px';
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      width: '600px';
+      height: '595px';
+    }
   }
 
   &__button {
