--- a/scss/layouts/_format-section.scss
+++ b/scss/layouts/_format-section.scss
@@ -1,27 +1,23 @@
 .formats-section {
-  &__title {
-    margin-bottom: 80px;
-  }
-
-  &__container {
+  &__slider {
     display: flex;
     align-items: center;
     gap: 32px;
   }
 
-  &__list {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 20px;
+  &__container {
+    overflow: hidden;
   }
 
-  &__item {
-    //  position: relative;
-    flex-basis: calc(100% - 40px / 3);
+  &__list {
+    margin-bottom: 32px;
+  }
 
-    &:hover {
-      transform: scale(1.05);
+  &__button {
+    display: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: flex;
     }
   }
 }
