--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  padding: 272px 0;
+  padding: 124px 0;
   background-image: linear-gradient(
       102.76deg,
       rgba(18, 18, 17, 0.78) 2.03%,
@@ -11,11 +11,42 @@
   background-position: center top;
   background-size: cover;
 
+  @media screen and (min-width: $bp-desktop) {
+    padding: 272px 0;
+  }
+
+  @media screen and (min-device-pixel-rario: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        102.76deg,
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 58.46%,
+        rgba(18, 18, 17, 0) 90.36%
+      ),
+      url(../images/hero-section-background@2x.jpg);
+  }
+
   &__title {
-    margin-bottom: 0;
+    margin-bottom: 48px;
     color: var(--color-primary-light);
     text-align: center;
-    font-size: 128px;
+    font-size: 67px;
+    line-height: 1;
     font-weight: 900;
+
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 0;
+      font-size: 128px;
+      line-height: 1.5;
+    }
+  }
+
+  &__button {
+    margin: 0 auto;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: none;
+    }
   }
 }
