--- a/scss/layouts/_traditions-section.scss
+++ b/scss/layouts/_traditions-section.scss
@@ -1,10 +1,15 @@
 .traditions-section {
-  padding-top: 96px;
+  padding-top: 40px;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding-top: 96px;
+  }
 
   &__container {
     display: flex;
     justify-content: space-between;
     gap: 40px;
+    align-items: flex-start;
   }
 
   &__content {
@@ -18,6 +23,15 @@
   &__text {
     &--limited {
       max-width: 330px;
+    }
+  }
+
+  &__image {
+    display: none;
+    border-radius: 400px 400px 0px 0px;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: block;
     }
   }
 }
