--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -10,9 +10,9 @@
     padding: 0;
     background-color: var(--color-secondary-dark);
     border-radius: 50%;
-  }
 
-  &--active {
-    background-color: var(--color-brand-dark);
+    &--active {
+      background-color: var(--color-brand-normal);
+    }
   }
 }
