--- a/scss/layouts/_contacts-section.scss
+++ b/scss/layouts/_contacts-section.scss
@@ -24,19 +24,19 @@
   &__map {
     flex-shrink: 0;
     margin: 0 -24px;
-    height: '176px';
+    height: 176px;
     border: none;
     border-radius: 16px;
 
     @media screen and (min-width: $bp-tablet) {
       margin: auto;
-      width: '320px';
-      height: '500px';
+      width: 320px;
+      height: 500px;
     }
 
     @media screen and (min-width: $bp-desktop) {
-      width: '600px';
-      height: '595px';
+      width: 600px;
+      height: 595px;
     }
   }
 
