--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -21,11 +21,11 @@
     }
 
     &::before {
-      left: 0;
+      left: -10px;
     }
 
     &::after {
-      right: 0;
+      right: -10px;
     }
   }
 
